--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,6 @@
-$bg: yellow;
-body { background: $bg;
- }
+@import "scss/normalize";
+@import "scss/variables";
+@import "scss/layout";
+@import "scss/base-before";
+@import "scss/base";
+@import "scss/base-after";
