--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -19,7 +19,7 @@
 
 header{grid-area: heady; background: rgb(254,218,175);}
 nav{grid-area: navvy; background: rgb(232,206,236);}
-main{grid-area: main; background: rgb(240,234,182); max-height: 100%}
+main{grid-area: mainy; background: rgb(240,234,182); max-height: 100%;}
 #aside1{grid-area: aside1; background: rgb(241,202,174);}
 #aside2{grid-area: aside2; background: rgb(191,226,246);}
 footer{grid-area: footy; background: rgb(171,171,171);}
